add links portfolio

--- a/client/src/Components/Footer/Footer.sass
+++ b/client/src/Components/Footer/Footer.sass
@@ -39,3 +39,6 @@ $computer: 1200px
     background-color: black
     padding: 2% 0 1% 0
     font-style: italic
+    & a
+        color: #f6383e
+        text-decoration: none
